...
                app:layout_collapseMode="parallax"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp">

                <!-- Welcome Message above logo -->
                <TextView
                    android:id="@+id/welcomeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="Hello, Jacob!"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
...
                        android:textStyle="bold"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- My Appointments Box -->
            <androidx.cardview.widget.CardView
                android:id="@+id/boxMyAppointments"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:foreground="?android:attr/selectableItemBackground"
...
